@@ -5,5 +5,6 @@
     public interface IMessage
     {
         object Send(IObject context, IObject receiver);
+        object Send(IObject context, object receiver);
     }
 }
